--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>马险Summit by cugmax</title>
+    <title>Max&#39;s Blog by cugmax</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">马险Summit</h1>
-      <h2 class="project-tagline">Such is life~</h2>
+      <h1 class="project-name">Max&#39;s Blog</h1>
+      <h2 class="project-tagline"></h2>
     </section>
 
     <section class="main-content">
@@ -21,7 +21,7 @@
 
 <p>Max's Blog</p>
 
-<p>我的第一篇博客，折腾挺久，预祝成功~~</p>
+<p>我的第二篇博客，好奇什么样~~</p>
 
       <footer class="site-footer">
 
